@@ -7,6 +7,7 @@
    entries.
 4. If replacing new-lines with 'br' tag, then treat text as HTML. Fixes display
    of embedded lyrics.
+5. In mobile layout, if click link in queue then switch to browse view.
 
 1.1.2
 -----
